tests/negative/semantic/for_condition_float/input.ci
void main() {
    for (int i = 0; 1.5; i++) { print(toString(i) + "\n"); }
}
